--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Reagan Caliendo</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    </head>
 
+    <body>
+        <nav>
+            <ul>
+                <li><a href="#" class="active">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">skills</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+
+        <div class="portfolio-container">
+            <aside class="left-column">
+                <div class="profile-header">
+                    <img src="/images/me.jpg" class="profile-pic">
+                    <img src="/images/name.svg" class="name">
+                    <div class="social-links">
+                        <a href="https://linkedin.com/in/reacali"><img src="/images/linkedin.png" alt="LinkedIn Profile"></a>
+                        <a href="mailto:caliendoreagan@gmail.com"><img src="/images/email.png" alt="Email"></a>
+                        <a href="https://github.com/reacali"><img src="/images/github.png" alt="GitHub"></a>
+                    </div>
+                </div>
+                <p class="bio">
+                    Hi! I'm Reagan, an (incoming) Master's student at the University of Calgary, with a focus in security research.
+                    <br><br>
+                    From co-founding ACM's SIG Cybersecurity in my undergrad to starting a thesis based program with a cybersecurity focus for my MSc, I have developed a great passion for security.
+                    <br><br>
+                    However, I'm a creative at heart, so, welcome to my space to showcase my security skills and design passions :)
+                </p>
+            </aside>
+
+            <main class="right column">
+                <section class="experiences">
+                    <h2>Experience</h2>
+                    <ul>
+                        <li><strong>University of Calgary</strong> Jan 2026 - Dec 2027</li>
+                        <li><strong>University of Illinois Chicago</strong> Jan 2023 - May 2025</li>
+                    </ul>
+                    <a href="#" class="see-more">See more →</a>
+                </section>
+                <section class="project">
+                    <section class="project-card">
+                        <h3>Project 1</h3>
+                        <p>Description</p>
+                        <a class="small-github" href="#"><img src="/images/github.png" alt="GitHub"></a>
+                    </section>
+                    <a href="#" class="see-more">See more →</a>
+                </section>
+            </main>
+        </div>
+    </body>
+</html>
