--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="portfolio-container">
             <aside class="left-column">
                 <div class="profile-header">
-                    <img src="/images/me.jpg" class="profile-pic">
-                    <img src="/images/name.svg" class="name">
+                    <img src="./images/me.jpg" class="profile-pic">
+                    <img src="./images/name.svg" class="name">
                     <div class="social-links">
-                        <a href="https://linkedin.com/in/reacali"><img src="/images/linkedin.png" alt="LinkedIn Profile"></a>
-                        <a href="mailto:caliendoreagan@gmail.com"><img src="/images/email.png" alt="Email"></a>
-                        <a href="https://github.com/reacali"><img src="/images/github.png" alt="GitHub"></a>
+                        <a href="https://linkedin.com/in/reacali"><img src="./images/linkedin.png" alt="LinkedIn Profile"></a>
+                        <a href="mailto:caliendoreagan@gmail.com"><img src="./images/email.png" alt="Email"></a>
+                        <a href="https://github.com/reacali"><img src="./images/github.png" alt="GitHub"></a>
                     </div>
                 </div>
                 <p class="bio">
