--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reagan Caliendo</title>
+        <link rel="icon" type="image/png" href="/images/rc_logo.png" />
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +22,10 @@
             </a>
 
             <div class="menu-links" id="myLinks">
-                <a href="#">HOME</a>
-                <a href="#">ABOUT</a>
-                <a href="#">EXPERIENCE</a>
-                <a href="#">PORTFOLIO</a>
-                <a href="#">CONTACT</a>
+                <a href="/index.html">HOME</a>
+                <a href="/about.html">ABOUT</a>
+                <a href="/experience.html">EXPERIENCE</a>
+                <a href="/portfolio.html">PORTFOLIO</a>
             </div>
         </div>
 
@@ -73,18 +73,18 @@
                         <li>Lead and organize meetings, projects, and workshops relating to cybersecurity with strong engagement, averaging 30+ attendees per meeting.</li>
                         <li>Design and lead hands-on cybersecurity workshops to develop participants' CTF skills in areas like penetration testing, incident response, and digital forensics, fostering practical, problem-solving abilities.</li>
                     </ul>
-                    <a href="#" class="see-more">See more →</a>
+                    <a href="/experience.html" class="see-more">See more →</a>
                 </section>
                 <section class="project">
                     <section class="project-card">
-                        <h3>TCP Echo Server Verification | C, Verifast</h3>
+                        <h3>TCP Echo Server Verification | C, Verifast</h3> May 2025
                         <ul>
                             <li>Conducted a research-oriented project to verify memory safety of a C-based TCP echo server using formal methods</li>
                             <li>Designed and annotated specifications in VeriFast to formally prove the absence of memory leaks and buffer overflows</li>
                         </ul>
-                        <a class="small-github" href="#"><img src="./images/github-logo.svg" alt="GitHub"></a>
+                        <a class="small-github" href="https://github.com/reacali/echo-server-verification" target="_blank"><img src="./images/github-logo.svg" alt="GitHub"></a>
                     </section>
-                    <a href="#" class="see-more">See more →</a>
+                    <a href="/portfolio.html" class="see-more">See more →</a>
                 </section>
             </main>
         </div>
